tests/baselines/reference/iteratorsAndStrictNullChecks.errors.txt
tests/cases/compiler/iteratorsAndStrictNullChecks.ts(2,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/compiler/iteratorsAndStrictNullChecks.ts(9,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/iteratorsAndStrictNullChecks.ts (2 errors) ====
    // for..of
    for (const x of ["a", "b"]) {
                    ~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        x.substring;
    }
    
    // Spread
    const xs = [1, 2, 3];
    const ys = [4, 5];
    xs.push(...ys);
               ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    